# VisionSuiteTrain

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/train/: deeplab3pp.yaml  dfine_hbb.yaml  efficientnet.yaml  yolov8_hbb.yaml
docs/: ARCHITECTURE.md
src/visionsuitetrain/: __init__.py  cli.py  registry.py
src/visionsuitetrain/config/: __init__.py  canonical.py  preset.py  schema.py
src/visionsuitetrain/data/: __init__.py  ir.py  split.py  validate.py
src/visionsuitetrain/data/readers/: __init__.py  images.py  labelme.py  ocr.py
src/visionsuitetrain/data/writers/: __init__.py  imagefolder.py  mask_png.py  yolo_obb.py  yolo_txt.py
src/visionsuitetrain/export/: __init__.py  base_exporter.py  manifest.py  model_yaml.py  onnx_io.py
src/visionsuitetrain/presets/export/: default.yaml
src/visionsuitetrain/presets/test/: default.yaml
src/visionsuitetrain/presets/train/: ad_default.yaml  cls_default.yaml  detr_default.yaml  hbb_accuracy.yaml  hbb_speed.yaml  obb_default.yaml  ocr_default.yaml  seg_default.yaml
src/visionsuitetrain/trainers/: __init__.py  base.py  deeplab.py  detr_hbb.py  efficientnet.py  foundation_ad.py  ocr_crnn.py  yolo_hbb.py  yolo_obb.py
tests/: test_config_align.py  test_config_registry.py  test_detr_ocr.py  test_export_contract.py  test_hardening.py  test_labelme_reader.py  test_obb_ad.py  test_preset.py  test_writers_roundtrip.py
